# RustSeismicInversion

./: .gitmodules  Cargo.toml
rust-seismic-inversion/: Cargo.toml  reflectivity.csv  synthetic_trace.csv  wavelet.csv
rust-seismic-inversion/src/: main.rs
rust-seismic-inversion/src/convolution/: mod.rs
rust-seismic-inversion/src/forward_modelling/: mod.rs
rust-seismic-inversion/src/models/: mod.rs
rust-seismic-inversion/src/utils/: mod.rs
rust-seismic-inversion/src/wavelets/: mod.rs
