[package]
name = "rust_seismic_inversion"
version = "0.1.0"
edition = "2024"

[dependencies]
rustfft="6.2"
ndarray="0.15"
num-complex="0.4"

nalgebra="0.32"
approx="0.5"

csv="1.3"
serde={ version="1.0", features=["derive"] }

rayon="1.8"
rand="0.8"


[profile.release]
opt-level=3
lto=true
codegen-units=1
panic="abort"

